kubernetes-config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iucas-service
spec:
  selector:
    app: cns-iucas
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
